--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
   // ─────────────────────────────────────────────────────────
   //  CONFIGURATION — paste your Dropbox App Key here
   // ─────────────────────────────────────────────────────────
-  const APP_KEY = '';   // ← e.g. 'abc123xyz456def'
+  const APP_KEY = '0al3xetet9ginf1';   // ← e.g. 'abc123xyz456def'
   // ─────────────────────────────────────────────────────────
 
   const REDIRECT_URI = window.location.origin + window.location.pathname.replace(/\/$/, '');
